<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.view.activity.QuizInfoActivity">

    <ImageView
        android:id="@+id/imageViewCloseQuizInfo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/close"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorAccent" />

    <TextView
        android:id="@+id/textViewTitleQuizInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".45"
        tools:text="XII NEET PART TEST 17052020 Copy" />

    <TextView
        android:id="@+id/textViewDurationQuizInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textViewTitleQuizInfo"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleQuizInfo"
        tools:text="180 Minutes" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkboxAgreementQuizInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_accept_all_the_terms_and_instructions"
        app:layout_constraintEnd_toEndOf="@+id/textViewTitleQuizInfo"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/textViewDurationQuizInfo"
        app:layout_constraintTop_toBottomOf="@+id/textViewDurationQuizInfo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonStartQuizInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:clickable="false"
        android:paddingHorizontal="40sp"
        android:paddingVertical="12dp"
        android:text="@string/start_test"
        android:textSize="20sp"
        app:icon="@drawable/ic_arrow"
        app:iconGravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkboxAgreementQuizInfo"
        app:layout_constraintVertical_bias="0" />

</androidx.constraintlayout.widget.ConstraintLayout>